# IoT_Consumo_energetico

./: .gitattributes  .gitignore
Escenarios/: .gitignore
Escenarios/BLE/Escenario 3 BLE/MQTT_Gateway/main/: CMakeLists.txt  mqtt_handler.h  uart_bridge_receiver.h  wifi_handler.c  wifi_handler.h
Escenarios/ESPNOW/Escenario_4_ESPNOW/firmware_nodo/main/: CMakeLists.txt  config.h  espnow_handler.c  main.c  mpu6050.c  mpu6050.h
Topologias/BLE estrella/BLE_gateway LQI estim/: CMakeLists.txt
Topologias/BLE estrella/firmware_nodo/: CMakeLists.txt
Topologias/BLE estrella/firmware_nodo_2/: CMakeLists.txt
Topologias/BLE estrella/firmware_nodo_3/: CMakeLists.txt
Topologias/BLE malla/BLE_Gateway_LQI estim/: CMakeLists.txt
Topologias/BLE malla/firmware_nodo_N1/: CMakeLists.txt
Topologias/BLE malla/firmware_nodo_N2/: CMakeLists.txt  build_idf.ps1
Topologias/BLE malla/firmware_router_N3/: CMakeLists.txt
Topologias/ESPNOW estrella/ESPNOW_Gateway LQI estima/: CMakeLists.txt
Topologias/ESPNOW estrella/firmware_nodo1/: CMakeLists.txt
Topologias/ESPNOW estrella/firmware_nodo2/: CMakeLists.txt
Topologias/ESPNOW estrella/firmware_nodo3/: CMakeLists.txt
Topologias/ESPNOW malla/ESPNOW_Gateway  LQI estim/: CMakeLists.txt
Topologias/ESPNOW malla/firmware_nodo/: CMakeLists.txt
Topologias/ESPNOW malla/firmware_nodo_2/: CMakeLists.txt  sdkconfig.defaults
Topologias/ESPNOW malla/firmware_router_espnow/: CMakeLists.txt
Topologias/THREAD Malla/Thread_Gateway LQI/: CMakeLists.txt  sdkconfig.defaults
Topologias/THREAD Malla/firmware_nodo_2/: CMakeLists.txt
Topologias/THREAD Malla/firmware_router/: sdkconfig.defaults
Topologias/THREAD estrella/Thread_Gateway_respaldo de LQI 0-3/main/: CMakeLists.txt  crypto_helper.c  thread_receiver.c
Topologias/THREAD estrella/firmware_nodo/: partitions.csv
Topologias/THREAD estrella/firmware_nodo_2/: CMakeLists.txt
Topologias/THREAD estrella/firmware_nodo_2/main/: CMakeLists.txt  config.h  thread_packet.h
Topologias/THREAD estrella/firmware_nodo_3/: sdkconfig.defaults
Topologias/ZIGBEE estrella/Zigbee_Gateway/: CMakeLists.txt  sdkconfig.defaults
Topologias/ZIGBEE estrella/Zigbee_Gateway/main/: CMakeLists.txt  app_crypto.c  app_crypto.h  config.h  idf_component.yml  install_code_compat.c  main.c  uart_bridge_sender.c  uart_bridge_sender.h  zigbee_receiver.c  zigbee_receiver.h
Topologias/ZIGBEE estrella/firmware_nodo1/: CMakeLists.txt
Topologias/ZIGBEE estrella/firmware_nodo2/: CMakeLists.txt
Topologias/ZIGBEE estrella/firmware_nodo3/: CMakeLists.txt  partitions.csv
Topologias/ZIGBEE malla/firmware_router/main/: CMakeLists.txt  app_crypto.c  config.h  idf_component.yml  install_code_compat.c  install_code_compat.h  main.c  zigbee_sender.c  zigbee_sender.h
(+170 files in other folders)
